[package]
name = "uwu-malware"
version = "0.1.0"
authors = ["joshualeejunyi <joshua.lee.99@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uwuify = "0.2.2"
device_query = "0.2.8"
chrono = "0.4.6"
enigo = "0.0.14"
clipboard = "0.5.0"
winput = "0.2.3"
# keylogger = "0.1.0"
# whatlang = "0.12.0"